--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/style/main.css">
+    <link rel="stylesheet" href="style/main.css">
     <title>Борис Рыжий</title>
 </head>
 
 <body>
     <div class="main">
-        <img class="image" src="/images/main.jpg">
+        <img class="image" src="images/main.jpg">
         <div class="text">
             <header>
-                <a class="link" href="/index.html">Борис Рыжий</a>
-                <a class="link" href="/menu.html">Содержание</a>
+                <a class="link" href="index.html">Борис Рыжий</a>
+                <a class="link" href="menu.html">Содержание</a>
             </header>
             <div class="text-info">
                 <h3 class="heading">Борис Рыжий</h3>
