--- a/biography.html
+++ b/biography.html
@@ -9,15 +9,15 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
             rel="stylesheet">
-        <link rel="stylesheet" href="/style/main.css">
+        <link rel="stylesheet" href="style/main.css">
         <title>Борис Рыжий — Биография</title>
     </head>
 
     <body>
         <div class="container">
             <header>
-                <a class="link" href="/index.html">Борис Рыжий</a>
-                <a class="link" href="/menu.html">Содержание</a>
+                <a class="link" href="index.html">Борис Рыжий</a>
+                <a class="link" href="menu.html">Содержание</a>
             </header>
 
             <h1 class="heading">Биография</h1>
@@ -49,7 +49,7 @@
                     которые работали на заводах Вторчермета.
                 </p>
                 <br>
-                <img src="/images/1.png" alt>
+                <img src="images/1.png" alt>
             </div>
             <br><br>
             <div class="block">
@@ -77,7 +77,7 @@
                     Вторчермете не боялся никого.
                 </p>
                 <br>
-                <img src="/images/2.png" alt>
+                <img src="images/2.png" alt>
             </div>
             <br><br>
             <div class="block">
@@ -114,7 +114,7 @@
                     роще.
                 </p>
                 <br>
-                <img src="/images/3.png" alt>
+                <img src="images/3.png" alt>
             </div>
             <br><br>
             <div class="block">
@@ -149,7 +149,7 @@
                     совестливость выразилась в стихах».
                 </p>
                 <br>
-                <img src="/images/4.png" alt>
+                <img src="images/4.png" alt>
             </div>
             <br><br>
             <div class="block">
