--- a/criticism.html
+++ b/criticism.html
@@ -9,15 +9,15 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
             rel="stylesheet">
-        <link rel="stylesheet" href="/style/main.css">
+        <link rel="stylesheet" href="style/main.css">
         <title>Борис Рыжий — Критика</title>
     </head>
 
     <body>
         <div class="container">
             <header>
-                <a class="link" href="/index.html">Борис Рыжий</a>
-                <a class="link" href="/menu.html">Содержание</a>
+                <a class="link" href="index.html">Борис Рыжий</a>
+                <a class="link" href="menu.html">Содержание</a>
             </header>
 
             <h1 class="heading">Критика</h1>
@@ -29,7 +29,7 @@
             </div>
             <br>
 
-            <img src="/images/ekb.jpg" alt>
+            <img src="images/ekb.jpg" alt>
             <br><br>
 
             <div class="block">
