--- a/poetry/1995.html
+++ b/poetry/1995.html
@@ -8,15 +8,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/style/main.css">
+    <link rel="stylesheet" href="style/main.css">
     <title>Борис Рыжий</title>
 </head>
 
 <body>
     <div class="container">
         <header>
-            <a class="link" href="/index.html">Борис Рыжий</a>
-            <a class="link" href="/menu.html">Содержание</a>
+            <a class="link" href="index.html">Борис Рыжий</a>
+            <a class="link" href="menu.html">Содержание</a>
         </header>
 
         <h1 class="heading">Поэзия</h1>
