--- a/poetry.html
+++ b/poetry.html
@@ -20,16 +20,16 @@
                 <a class="link" href="/menu.html">Содержание</a>
             </header>
             <div class="text-info">
-                <a class="link" href="/poetry/1992.html">— 1992 —</a><br><br>
-                <a class="link" href="/poetry/1993.html">— 1993 —</a><br><br>
-                <a class="link" href="/poetry/1994.html">— 1994 —</a><br><br>
-                <a class="link" href="/poetry/1995.html">— 1995 —</a><br><br>
-                <a class="link" href="/poetry/1996.html">— 1996 —</a><br><br>
-                <a class="link" href="/poetry/1997.html">— 1997 —</a><br><br>
-                <a class="link" href="/poetry/1998.html">— 1998 —</a><br><br>
-                <a class="link" href="/poetry/1999.html">— 1999 —</a><br><br>
-                <a class="link" href="/poetry/2000.html">— 2000 —</a><br><br>
-                <a class="link" href="/poetry/2001.html">— 2001 —</a><br><br>
+                <a class="link" href="1992.html">— 1992 —</a><br><br>
+                <a class="link" href="1993.html">— 1993 —</a><br><br>
+                <a class="link" href="1994.html">— 1994 —</a><br><br>
+                <a class="link" href="1995.html">— 1995 —</a><br><br>
+                <a class="link" href="1996.html">— 1996 —</a><br><br>
+                <a class="link" href="1997.html">— 1997 —</a><br><br>
+                <a class="link" href="1998.html">— 1998 —</a><br><br>
+                <a class="link" href="1999.html">— 1999 —</a><br><br>
+                <a class="link" href="2000.html">— 2000 —</a><br><br>
+                <a class="link" href="2001.html">— 2001 —</a><br><br>
             </div>
             <footer>
                 <p class="secondary-text">1974—2001</p>
