--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 <body>
     <div class="main">
-        <img class="image" src="images/main.jpg">
+        <div class="image">
+            <img src="images/main.jpg">
+        </div>
         <div class="text">
             <header>
                 <a class="link" href="index.html">Борис Рыжий</a>
